--- a/boot/pom.xml
+++ b/boot/pom.xml
@@ -2,38 +2,38 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>SEAP</artifactId>
-		<groupId>com.xMIFx.SEAP</groupId>
-		<version>0.0.1-SNAPSHOT</version>
-	</parent>
 	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.moneydistribution</groupId>
+		<artifactId>money-distribution</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 
 	<artifactId>app</artifactId>
 	<name>${project.name} :: Spring boot</name>
 	<dependencies>
 		<dependency>
-			<groupId>com.xMIFx.SEAP</groupId>
+			<groupId>com.moneydistribution</groupId>
 			<artifactId>domain</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.xMIFx.SEAP</groupId>
+			<groupId>com.moneydistribution</groupId>
 			<artifactId>warehouse-api</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.xMIFx.SEAP</groupId>
+			<groupId>com.moneydistribution</groupId>
 			<artifactId>warehouse-domain</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.xMIFx.SEAP</groupId>
+			<groupId>com.moneydistribution</groupId>
 			<artifactId>warehouse-h2-base</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.xMIFx.SEAP</groupId>
+			<groupId>com.moneydistribution</groupId>
 			<artifactId>core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -87,7 +87,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring-boot.version}</version>
 				<configuration>
-					<mainClass>com.xMIFx.SEAP.application.starter.SeapApplication</mainClass>
+					<mainClass>com.moneydistribution.application.starter.SeapApplication</mainClass>
 					<layout>ZIP</layout>
 				</configuration>
 			</plugin>
@@ -104,7 +104,7 @@
 						<configuration>
 							<artifactItems>
 								<artifactItem>
-									<groupId>com.xMIFx.SEAP</groupId>
+									<groupId>com.moneydistribution</groupId>
 									<artifactId>ui</artifactId>
 									<version>${project.version}</version>
 									<type>war</type>
