--- a/pom.xml
+++ b/pom.xml
@@ -30,8 +30,7 @@
 		<spring-boot.version>1.4.2.RELEASE</spring-boot.version>
 		<maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
 		<maven-compiler.version>3.5.1</maven-compiler.version>
-		<jersey-spring.version>1.19.3</jersey-spring.version>
-		<jackson-jaxrs-json-provider.version>2.8.5</jackson-jaxrs-json-provider.version>
+		<jackson.version>2.8.5</jackson.version>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -69,14 +68,19 @@
 				<version>${logback.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.fasterxml.jackson.jaxrs</groupId>
-				<artifactId>jackson-jaxrs-json-provider</artifactId>
-				<version>${jackson-jaxrs-json-provider.version}</version>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-databind</artifactId>
+				<version>${jackson.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>org.glassfish.jersey.media</groupId>
-				<artifactId>jersey-media-json-jackson</artifactId>
-				<version>2.24.1</version>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.codehaus.jackson</groupId>
+				<artifactId>jackson-mapper-asl</artifactId>
+				<version>1.9.13</version>
 			</dependency>
 		</dependencies>
 
